# yandex-mail-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP.md  LICENSE  README.md  conftest.py  pyproject.toml  server.py  test_helpers.py  test_integration.py  test_server.py  yandex_mail_mcp.py
.github/workflows/: publish.yml
